# group-8--Cmp-06--2

./: operation_result.py  pyproject.toml  services.py  students.data
group(8)-Cmp(06)/: README.md
group(8)-Cmp(06)/cli/: controllers.py  main.py  ui.py
group(8)-Cmp(06)/common/: models.py  utils.py
group(8)-Cmp(06)/gui/: enrollment.py  login.py  main.py  subjects.py
